--- a/src/WebApp/Pages/User/ForgotPassword.razor
+++ b/src/WebApp/Pages/User/ForgotPassword.razor
@@ -8,7 +8,6 @@
 @using WebApp.Services.IdentityService
 
 @inject IIdentityService IdentityService
-@inject AlertState AlertState
 @inject NavigationManager NavigationManager
 
 <div class="d-flex flex-column align-items-center justify-content-center rounded-4 border-secondary-subtle mt-5 p-3 bg-body-tertiary mx-auto border shadow"
@@ -38,6 +37,8 @@
 
 @code
 {
+    [CascadingParameter(Name = "Notification")]
+    private TelerikNotification _notificatioRef { get; set; }
     private ForgotPasswordRequest _forgotPasswordRequest;
 
     protected override void OnInitialized()
@@ -50,20 +51,14 @@
         var resultObject = await IdentityService.ForgotPassword(_forgotPasswordRequest);
         if (resultObject.ResultCode.Equals(ResultCode.Success))
         {
-            AlertState.AddMessage(new AlertItem
-                {
-                    Message = "Please check email",
-                    Title = "Success",
-                    Type = AlertType.Success
-                });
+            _notificatioRef.Show(
+                text: "Please check email",
+                themeColor: ThemeConstants.Notification.ThemeColor.Light);
             NavigationManager.NavigateTo("/");
             return;
         }
-        AlertState.AddMessage(new AlertItem
-            {
-                Message = resultObject.Messages,
-                Title = "Error",
-                Type = AlertType.Danger
-            });
+        _notificatioRef.Show(
+            text: resultObject.Messages,
+            themeColor: ThemeConstants.Notification.ThemeColor.Error);
     }
 }
