--- a/src/WebApp/Pages/User/ResetPassword.razor
+++ b/src/WebApp/Pages/User/ResetPassword.razor
@@ -1,14 +1,10 @@
 ﻿@page "/reset-password"
 
 @layout EmptyLayout
-@using EShop.WebApp.Models.Enums
-@using EShop.WebApp.States
 @using WebApp.Core.RequestModels
-@using WebApp.Models.Common
 @using WebApp.Services.IdentityService
 
 @inject IIdentityService IdentityService
-@inject AlertState AlertState
 @inject NavigationManager NavigationManager
 
 <div class="d-flex flex-column align-items-center justify-content-center rounded-4 border-secondary-subtle mt-5 p-3 bg-body-tertiary mx-auto border shadow"
@@ -38,6 +34,8 @@
 
 @code
 {
+    [CascadingParameter(Name = "Notification")]
+    private TelerikNotification _notificatioRef { get; set; }
     private ResetPasswordRequest _resetPasswordRequest;
 
     protected override void OnInitialized()
@@ -50,20 +48,14 @@
         var resultObject = await IdentityService.ResetPassword(_resetPasswordRequest);
         if (resultObject.ResultCode.Equals(ResultCode.Success))
         {
-            AlertState.AddMessage(new AlertItem
-                {
-                    Message = resultObject.Messages,
-                    Title = "Success",
-                    Type = AlertType.Success
-                });
+            _notificatioRef.Show(
+                text: resultObject.Messages,
+                themeColor: ThemeConstants.Notification.ThemeColor.Light);
             NavigationManager.NavigateTo("/");
             return;
         }
-        AlertState.AddMessage(new AlertItem
-            {
-                Message = resultObject.Messages,
-                Title = "Error",
-                Type = AlertType.Danger
-            });
+        _notificatioRef.Show(
+            text: resultObject.Messages,
+            themeColor: ThemeConstants.Notification.ThemeColor.Error);
     }
 }
