--- a/src/WebApp/Pages/User/Login.razor
+++ b/src/WebApp/Pages/User/Login.razor
@@ -1,18 +1,14 @@
 ﻿@page "/login"
 
-@using EShop.WebApp.Models.Enums
-@using EShop.WebApp.States
 @using WebApp.Core.RequestModels
-@using WebApp.Models.Common
 @using WebApp.Services.IdentityService
 @using WebApp.States.AuthState
 
 @layout EmptyLayout
 
 @inject IIdentityService IdentityService
-@inject AlertState AlertState
-@inject NavigationManager NavigationManager
-@inject IAccountManagement AccountManagement
+@inject NavigationManager _nav
+@inject IAccountManagement _accountManagement
 
 <div class="d-flex flex-column align-items-center justify-content-center rounded-4 border-secondary-subtle mt-5 p-3 bg-body-tertiary mx-auto border shadow"
      style="width: 40%;">
@@ -46,27 +42,33 @@
 
 @code
 {
+    [CascadingParameter(Name = "Notification")]
+    private TelerikNotification _notificatioRef { get; set; }
     private SignInRequest _signInRequest;
 
     protected override void OnInitialized()
     {
         _signInRequest = new();
-
+        // Check uri for redirect page
+        if (_nav.Uri != $"{_nav.BaseUri}login")
+        {
+            _nav.NavigateTo("/login");
+        }
     }
 
     private async Task ValidSubmit()
     {
-        var resultObject = await AccountManagement.Login(_signInRequest);
+        var resultObject = await _accountManagement.Login(_signInRequest);
         if (resultObject.ResultCode.Equals(ResultCode.Success))
         {
-            NavigationManager.NavigateTo("/");
+            _notificatioRef.Show(
+                text: resultObject.Messages,
+                themeColor: ThemeConstants.Notification.ThemeColor.Light);
+            _nav.NavigateTo("/");
             return;
         }
-        AlertState.AddMessage(new AlertItem
-            {
-                Message = resultObject.Messages,
-                Title = "Error",
-                Type = AlertType.Danger
-            });
+        _notificatioRef.Show(
+            text: resultObject.Messages,
+            themeColor: ThemeConstants.Notification.ThemeColor.Error);
     }
 }
