--- a/src/WebApp/App.razor
+++ b/src/WebApp/App.razor
@@ -1,5 +1,5 @@
-﻿@using WebApp.Layout.Mainlayout
-@using Microsoft.AspNetCore.Components.Authorization
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@using WebApp.Layout.Mainlayout
 @using WebApp.Pages.Common
 @using WebApp.Pages.User
 
