--- a/src/WebApp/_Imports.razor
+++ b/src/WebApp/_Imports.razor
@@ -4,11 +4,14 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.AspNetCore.Components.WebAssembly.Http
-@using Microsoft.JSInterop
-@using WebApp.Core
-@using WebApp.Layout
-@using Telerik.Blazor
-@using Telerik.Blazor.Components
-@using Telerik.SvgIcons
-@using Telerik.FontIcons
+@using Microsoft.AspNetCore.Components.WebAssembly.Http;
+@using Microsoft.JSInterop;
+@using Telerik.Blazor;
+@using Telerik.Blazor.Components;
+@using Telerik.FontIcons;
+@using Telerik.FontIcons;
+@using Telerik.SvgIcons;
+@using WebApp.Core;
+@using WebApp.Layout;
+@using WebApp.Services.BasketService;
+@using WebApp.States.AuthState;
