--- a/src/WebApp/Pages/Home.razor
+++ b/src/WebApp/Pages/Home.razor
@@ -1,11 +1,10 @@
 ﻿@page "/"
 
+@using WebApp.Models.ResponseModels
 @using WebApp.Services.CatalogService
-@using WebApp.Components.Common
+@using WebApp.Components.Product
 
 @inject ICatalogService _catalogService
-@inject IBasketService _basketService
-@inject NavigationManager _navManager
 
 <TelerikLoaderContainer Visible="@_visibleLoader"></TelerikLoaderContainer>
 
@@ -74,48 +73,7 @@
                     @foreach (var product in _productPaginationResponse.Data)
                     {
                         <GridLayoutItem>
-                            >
-                            <TelerikCard Class="border-primary-subtle rounded-4 border">
-                                <div class="m-auto" style="cursor:pointer;"
-                                     @onclick=@(() => _navManager.NavigateTo($"/products/{product.Id}"))>
-                                    <CardImage Src="@product.ThumbnailUrl"
-                                               Width="120px"
-                                               Height="120px"
-                                               Class="border-secondary-subtle m-auto border"></CardImage>
-                                </div>
-
-                                <CardBody>
-                                    <div style="height:60px;cursor:pointer;" @onclick=@(() => _navManager.NavigateTo($"/products/{product.Id}"))>
-                                        <!-- Truncate product name if it exceeds 20 characters -->
-                                        @if (product.Name.Length > 55)
-                                        {
-                                            @($"{product.Name.Substring(0, 55)}...")
-                                        }
-                                        else
-                                        {
-                                            @product.Name
-                                        }
-                                    </div>
-
-                                    <CardSeparator></CardSeparator>
-
-                                    <div class="d-flex justify-content-around mt-2">
-                                        <Rating Max="5" Star="@((int)product.RatingAverage)"></Rating>
-                                        <CardSubTitle>Buyer :@product.TotalBuyer</CardSubTitle>
-                                    </div>
-
-                                    <CardSeparator></CardSeparator>
-
-                                    <CardTitle>$ @product.Price</CardTitle>
-                                </CardBody>
-                                <CardActions Layout="@CardActionsLayout.Stretch">
-                                    <TelerikButton OnClick=@(() => OnClickAddToCartButton(product.Id))
-                                                   Icon="@SvgIcon.Cart"
-                                                   Rounded="@ThemeConstants.Button.Rounded.Full">
-                                        Add To Cart
-                                    </TelerikButton>
-                                </CardActions>
-                            </TelerikCard>
+                            <ProductCart ProductInfo="@product"></ProductCart>
                         </GridLayoutItem>
                     }
                 </GridLayoutItems>
