--- a/src/WebApp/Pages/User/ForgotPassword.razor
+++ b/src/WebApp/Pages/User/ForgotPassword.razor
@@ -1,11 +1,9 @@
 ﻿@page "/forgot-password"
 
-@layout EmptyLayout
-@using EShop.WebApp.Models.Enums
-@using EShop.WebApp.States
-@using WebApp.Core.RequestModels
-@using WebApp.Models.Common
+@using WebApp.Models.RequestModels.Identity
 @using WebApp.Services.IdentityService
+
+@layout EmptyLayout
 
 @inject IIdentityService IdentityService
 @inject NavigationManager NavigationManager
@@ -34,31 +32,3 @@
         <a href="/" class="text-secondary">Back to home page</a>
     </p>
 </div>
-
-@code
-{
-    [CascadingParameter(Name = "Notification")]
-    private TelerikNotification _notificatioRef { get; set; }
-    private ForgotPasswordRequest _forgotPasswordRequest;
-
-    protected override void OnInitialized()
-    {
-        _forgotPasswordRequest = new();
-    }
-
-    private async Task ValidSubmit()
-    {
-        var resultObject = await IdentityService.ForgotPassword(_forgotPasswordRequest);
-        if (resultObject.ResultCode.Equals(ResultCode.Success))
-        {
-            _notificatioRef.Show(
-                text: "Please check email",
-                themeColor: ThemeConstants.Notification.ThemeColor.Light);
-            NavigationManager.NavigateTo("/");
-            return;
-        }
-        _notificatioRef.Show(
-            text: resultObject.Messages,
-            themeColor: ThemeConstants.Notification.ThemeColor.Error);
-    }
-}
