--- a/src/WebApp/Pages/Order/Cart.razor
+++ b/src/WebApp/Pages/Order/Cart.razor
@@ -18,7 +18,7 @@
             <Content>
                 @foreach (var baskItem in _basketItemList)
                 {
-                    <TelerikCard Orientation="CardOrientation.Horizontal" Class="mb-4">
+                    <TelerikCard Orientation="CardOrientation.Horizontal" Class="mb-4 rounded-4 shadow">
                         <CardImage Src="@baskItem.PictureUrl" Height="120px" Width="120px"></CardImage>
 
                         <CardHeader>
