--- a/src/WebApp/Pages/Order/Checkout.razor
+++ b/src/WebApp/Pages/Order/Checkout.razor
@@ -9,19 +9,23 @@
         <WizardSteps>
             <WizardStep Label="Shipping Address" Icon="@SvgIcon.MapMarkerTarget">
                 <Content>
-                    <span>1. Please fill in your shipping address</span>
-                    <CheckoutAddressForm></CheckoutAddressForm>
+                    <div class="w-50 mx-auto">
+                        <span class="w-50 mx-auto">1. Please fill in your shipping address</span>
+                        <CheckoutAddressForm></CheckoutAddressForm>
+                    </div>
                 </Content>
             </WizardStep>
             <WizardStep Label="Payment Method" Icon="@SvgIcon.Dollar">
                 <Content>
-                    <span>2. Please select your payment method</span>
-                    <CheckoutPaymentForm></CheckoutPaymentForm>
+                    <div class="w-50 mx-auto">
+                        <span>2. Please select your payment method</span>
+                        <CheckoutPaymentForm></CheckoutPaymentForm>
+                    </div>
                 </Content>
             </WizardStep>
             <WizardStep Label="Confirmation" Icon="@SvgIcon.Check">
                 <Content>
-                    <span>3. Review and confirm your order</span>
+                    <span class="mx-auto">3. Review and confirm your order</span>
                     <h2>Registration completed.</h2>
                 </Content>
             </WizardStep>
