--- a/src/WebApp/Pages/Order/Cart.razor
+++ b/src/WebApp/Pages/Order/Cart.razor
@@ -1,6 +1,7 @@
 ﻿@page "/cart"
 
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
 
 @attribute [Authorize]
 
